[package]
name = "xca9548a"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/xca9548a-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TCA9548A and PCA9548A I2C switches/multiplexers."
readme = "README.md"
keywords = ["i2c", "switch", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/xca9548a-rs"
documentation = "https://docs.rs/xca9548a"

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/xca9548a-rs", branch = "master" }
coveralls = { repository = "eldruin/xca9548a-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true

[features]
default = []
