[package]
name = "xca9548a"
version = "0.2.1"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/xca9548a-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TCA954xA and PCA954xA I2C switches/multiplexers."
readme = "README.md"
keywords = ["i2c", "switch", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/xca9548a-rs"
documentation = "https://docs.rs/xca9548a"
edition = "2018"

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "1"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.11", default-features = false, features = ["eh1"] }

[profile.release]
lto = true
